# Ibots_Vyuha_App_ED25B015

Calculater App (Ans to Q1)/: Comments on previous Code.txt  calculator.py
Calulater App/: calculator.py  journal.txt
Intro/: Introduction
Q2/: Q2.1.txt  Q2.2.2.txt  Q2.2.3.txt
Q3/: Q3.1.1.txt  Q3.2.txt
Q4/: CMakeLists.txt  Readme.md
Q4/geography/geographyNew/: header.h
Q4/geography/geographyNew/supplementaryFiles/: TOD.h
Q4/geography/geographyNewOld/: geography_helper.h  header.h
Q4/geography/geographyNewOld/supplementaryFiles/: TOD.h
Q4/geography/geographyOG/: header.h
Q4/modules/: some math i found online.c
Q4/src/: thestart_iguess.c
Q4/timeOfDay/: TOD.c
Q4/timeOfDay/headers/: TOD_Helper.c  geography.c
Q6/: Q6 MCQ
